styles/apps.css
/* ... */
#token-hud .effect-control {
  display: inline-flex;
  align-items: center;
}

#token-hud .effect-control img {
  max-height: 25px;
}

#token-hud .effect-control label {
  color: white;
  font-size: small;
  max-height: 25px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  line-height: 25px;
}

#token-hud div.right .control-icon {
  margin: 5px 0;
}

#token-hud .status-maneuvers .effect-control.active {
  opacity: 1;
}

/* 
// if #collapsible-hud is checked, set border of .maneuver-open
#token-hud .maneuver-open 
{
  border: 1px solid #ff6400;
} */

@keyframes glowing {
  0% {
    box-shadow: 0px 0px 5px red;
  }

  50% {
    box-shadow: 0px 0px 20px 5px red;
  }

  100% {
    box-shadow: 0 0 5px red;
  }
}

.glowing {
  animation: glowing 500ms 3;
}

.gurps-invalid {
  border: 2px solid red !important;
  box-shadow: none !important;
}

.gurps-valid {
  border: 2px solid green !important;
  box-shadow: none !important;
}

#fright-check label {
  display: flex;
  align-items: center;
}

#spells > div,
#notes .notesmenu {
  white-space: normal;
}

#spells .gga-manual {
  min-width: 150px;
}

.window-app .window-header .window-title .document-debug-link {
  margin-left: 0.25rem;
  opacity: 0.5;
  cursor: pointer;
}

.debug-content {
  max-height: 400px;
  overflow-y: auto;
  white-space: pre-wrap;
  word-wrap: break-word;
}

#itemname {
  font-size: 1.5em;
  text-align: center;
  padding: 4px;
}

.gga-item-sheet-title {
  text-transform: uppercase;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  padding: 4px;
  font-size: 16px;
  text-align: center;
  margin-bottom: 6px;
}

.first-cap::first-letter {
  font-size: 19px;
  text-transform: uppercase;
}

.color-equipment {
  background-color: #35713e;
}

.color-spell {
  background-color: #91241e;
}

.color-skill {
  background-color: #453c96;
}

.color-feature {
  background-color: #3177b2;
}

.gga-file-list.table {
  display: inline-grid;
  grid-template-columns: min-content 1fr max-content min-content min-content;
  grid-template-rows: 26px;
  margin: 0 0 0.25em 0;
  row-gap: 5px;
  align-items: center;
}

.gga-file-list.table > :nth-child(10n + 6),
.gga-file-list.table > :nth-child(10n + 7),
.gga-file-list.table > :nth-child(10n + 8),
.gga-file-list.table > :nth-child(10n + 9),
.gga-file-list.table > :nth-child(10n + 10) {
  background-color: rgb(0, 0, 0, 0.05);
}

.gga-file-list.table .label {
  height: 100%;
  display: flex;
  align-items: center;
}

.gga-file-list.table .value {
  padding: 0 0.25rem;
  height: 100%;
  display: flex;
  align-items: center;
}

.gga-button-bar {
  padding-top: 0.5rem;
  margin: 0 -8px;
  padding-left: 8px;
  padding-right: 8px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.apply-damage-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.apply-damage-title {
  width: 100%;
  height: 100%;
  font-size: 1.5em;
  text-transform: uppercase;
  border-bottom: #772e21 1px solid;
  flex-direction: column;
  display: flex;
  justify-content: flex-end;
  padding-bottom: 8px;
}

.apply-damage-column {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0 25px;
}

.apply-damage-header img {
  max-height: 100px !important;
  border: none;
}

.apply-damage-quick {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.quick-input {
  height: 30px !important;
  padding-bottom: 2px;
  margin-right: 6px !important;
}
#encumbrance > div:nth-child(8) {
  min-width: 85px;
}
#result-extrastuff {
  min-width: 400px;
}
.fa.fa-check-circle.green {
  color: green;
}
.fa.fa-check-circle.black {
  color: black;
}

/**
    ***********************************
    *                                 *
    * Combat Tracker Maneuver Menu    *
    *                                 *
    ***********************************
 */
.token-effect.maneuver-badge {
  width: 32px;
  height: 32px;
  opacity: 0.5;
}

.token-effect.maneuver-badge.active {
  opacity: 1;
}

li.combatant.active {
  display: flex;
  flex-wrap: wrap;
}

.maneuver-combat-tracker-menu {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.95);
  border: 2px solid #337244;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
  z-index: 300;
  display: none;
  padding: 5px;
  margin-bottom: 5px;
}

.maneuver-combat-tracker-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
  max-height: 350px;
  overflow-y: auto;
}

.maneuver-combat-tracker-menu li {
  cursor: pointer;
  width: 100%;
}

.maneuver-combat-tracker-menu li:hover {
  background-color: #261f1d;
}

.maneuver-select-icon {
  max-width: 40px;
  max-height: 40px;
  margin: 5px;
}

.maneuver-select-line {
  display: flex;
  justify-content: space-between;
  width: 100%;
  flex-direction: row;
  margin-right: 5px;
  align-items: center;
}

.maneuver-select-choice {
  line-height: 1.2;
  font-size: 0.95em;
  margin-right: 5px;
  color: white;
}

.maneuver-select-hint {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  min-width: 58px;
  font-weight: lighter;
}

.cant-do-icon {
  color: rgba(194, 193, 183, 0.5);
}

.can-do-icon {
  color: rgba(250, 235, 215, 0.82);
}
.actor-sheet-icons,
.maneuver-select-info {
  display: flex;
  flex-direction: row;
}

.maneuver-tooltip {
  text-align: center;
  min-width: 8rem;
  /* 
  padding: 5px;
  position: absolute;
  z-index: 1;
  top: 100%;
  transition: opacity 0.3s;
  left: auto;
  right: 0;
  margin-left: 0; */
}
/* .maneuver-tooltip::after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 75%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

.token-initiative:hover ~ .maneuver-tooltip {
  visibility: visible;
  z-index: 200;
  font-size: 0.8em;
  line-height: 1.1;
}

.maneuver-tooltip:first-child {
  bottom: -550% !important;
} */
/* ... */

